--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,7 +19,7 @@ const navItems = [
     <div class="flex items-center justify-between h-16 md:h-20">
       <!-- Logo / Company Name -->
       <a href="#home" class="flex items-center group">
-        <Image src={logoNavbarImage} alt={globalSettings.companyName} class="h-14 w-auto group-hover:opacity-80 transition-opacity" />
+        <Image src={logoNavbarImage} alt={globalSettings.companyName} class="h-14 w-auto group-hover:opacity-80 transition-opacity img-darken" />
       </a>
 
       <!-- Desktop Navigation -->
